{{$NEXT}}

0.18     2016-06-15

- Added union types.

- If a subtype's parent could be inlined and the subtype itself did not
  specify any additional constraints (inlinable or not), then the subtype was
  not being inlined, even though it could be.

- This distro now works with Perl 5.8 (though it was only tested with 5.8.8).


0.17     2016-06-01

- Change "use v5.10" to "use 5.010". The former appears to cause warnings on
  older Perls.


0.16     2016-05-30

- Remove use of Class::Load and Module::Runtime.


0.15     2016-05-30

- The Num and Int type now accepts numbers in scientific notation such as 1e10
  or -1.2e-5.

- Removed various prereqs that weren't really needed.

- Added three new libraries, Specio::Library::String, ::Numeric, and
  ::Perl. These provide additional commonly used string and numeric types, as
  well as some types related to Perl syntax.


0.14     2016-05-22

- Added an inline_assert method for constraint objects. This makes certain
  types of inlining tasks easier.

- Parameterized constraint objects now have a default name based on the parent
  type and contained type.

- Rewrote the code used for inlined types so that the generated inline code is
  optimized to check the most common cases first.

- Fixed a bug where two enum types could not be inlined together in the same
  sub.


0.13     2016-05-15

- Parameterizing a type which generated inline parameterized constraints (like
  the ArrayRef and HashRef builtins) now dies if given a parameter which
  cannot itself be inlined. Mixing inlinable and non-inlinable constraints
  previously caused very confusing errors.


0.12     2015-12-19

- Fixed tests that failed if Moose wasn't installed. Reported by Karen
  Etheridge. RT #109247.


0.11     2014-05-27

- Remove a Perl 5.14-ism.


0.10     2014-05-26

- Added Class::Method::Modifiers to prereqs.

- Made Specio classes faster by inlining all accessors and constructors.
