@@ -6,6 +6,7 @@ use warnings;
 our $VERSION = '0.19';
 
 use Role::Tiny;
+use Specio::PartialDump qw( partial_dump );
 use Storable qw( dclone );
 
 use Specio::Constraint::Role::Interface;
@@ -47,7 +48,7 @@ sub _wrap_message_generator {
 
             return
                   "Validation failed for $description with value "
-                . Devel::PartialDump->new->dump($value)
+                . partial_dump($value)
                 . '(does not do '
                 . $role . ')';
         };
