@@ -5,6 +5,7 @@ use warnings;
 
 our $VERSION = '0.19';
 
+use Specio::PartialDump qw( partial_dump );
 use Storable qw( dclone );
 
 use Role::Tiny;
@@ -48,7 +49,7 @@ sub _wrap_message_generator {
 
             return
                   "Validation failed for $description with value "
-                . Devel::PartialDump->new->dump($value)
+                . partial_dump($value)
                 . '(not isa '
                 . $class . ')';
         };
