@@ -7,6 +7,7 @@ ignore = t/00-*
 ignore = t/author-*
 ignore = t/release-*
 ignore = xt/**/*
+ignore = lib/Specio/PartialDump.pm
 argv = --profile=$ROOT/perlcriticrc
 
 [PerlTidy]
